<resources>
    <string name="app_name">quwi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quwi</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_projects">Projects</string>
    <string name="api_endpoint">https://api.quwi.com/v2/</string>
    <string name="txtViewTimeForWeekLabel">time this week</string>
    <string name="txtViewTimeForMonthLabel">this month</string>
    <string name="txtViewTotalTimeLabel">total</string>

    <string name="toolbarTitleProjects">My projects</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
    <string name="ok">OK</string>
    <string name="users">Users</string>
    <string name="add_me_as_watcher">Add me as watcher to tickets created by others</string>

</resources>