<?xml version="1.0" encoding="utf-8"?>

<android.widget.ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projects.ProjectDetailsFragment">
        <TextView
            android:id="@+id/txtViewStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@string/active"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchActive"
            android:layout_width="56dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/txtViewStatusLabel"
            app:layout_constraintTop_toTopOf="@+id/txtViewStatusLabel" />

        <TextView
            android:id="@+id/textViewProjectNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/txtViewStatusLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtViewStatusLabel" />

        <EditText
            android:id="@+id/editTextProjectName"
            android:layout_width="117dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/rectangle_shape"
            android:ems="2"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/textViewProjectNameLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewProjectNameLabel" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="91dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:text="@string/ok"
            app:layout_constraintStart_toEndOf="@+id/editTextProjectName"
            app:layout_constraintTop_toTopOf="@+id/textViewProjectNameLabel" />


        <LinearLayout
            android:id="@+id/linearLayoutTimeLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProjectName">

            <TextView
                android:id="@+id/textViewUsersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:layout_marginLeft="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutTimeLabels"
                tools:layout_editor_absoluteY="209dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerViewUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchMakeMeWatcher"
            android:layout_width="66dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/txtViewStatusLabel"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTimeLabels" />

        <TextView
            android:id="@+id/textViewMakeMeWatcherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/add_me_as_watcher"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/switchMakeMeWatcher"
            app:layout_constraintTop_toTopOf="@+id/switchMakeMeWatcher" />



</androidx.constraintlayout.widget.ConstraintLayout>
</android.widget.ScrollView>