<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/rectangle_shape"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewProjectIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground">
        </ImageView>

        <TextView
            android:id="@+id/txtViewProjectName"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:singleLine="false"
            android:text="Project Name">
        </TextView>

        <TextView
            android:id="@+id/txtViewProjectStatus"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="Status">
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayoutTimeLabels"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtViewTimeForWeekLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_gravity="left"
                android:text="@string/txtViewTimeForWeekLabel">
            </TextView>
            <TextView
                android:id="@+id/txtViewTimeForMonthLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="3dp"
                android:text="@string/txtViewTimeForMonthLabel">
            </TextView>
            <TextView
                android:id="@+id/txtViewTotalTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="3dp"
                android:text="@string/txtViewTotalTimeLabel">
            </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutTimeIndicators"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtViewTimeForWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="03:20:11">
            </TextView>
            <TextView
                android:id="@+id/txtViewTimeForMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="25:20:11">
            </TextView>
            <TextView
                android:id="@+id/txtViewTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="70:20:11">
            </TextView>
        </LinearLayout>
    </LinearLayout>

